﻿zg 05.11.2014 16:44:44 +0200 - build 4170

1. уточнение 4047 для плагииновых панелей:
   Если открыть в панели .7z-файл, содержащий внутри папки, стать на папку и нажать CtrlQ, показывает:
   Folders          0
   Files            0
   Files size       0
   Allocated size   0 (0%)

drkns 02.11.2014 13:15:16 +0200 - build 4169

1. Ещё пара уточнений 4167.

drkns 02.11.2014 11:38:28 +0200 - build 4168

1. Уточнение 4167.

drkns 02.11.2014 00:53:53 +0200 - build 4167

1. Рефакторинг.

drkns 02.11.2014 00:38:57 +0200 - build 4166

1. Уточнение 4164.2.

svs 30.10.2014 09:39:35 +0300 - build 4165

1. SQLite 3.8.7.1

drkns 29.10.2014 21:40:58 +0200 - build 4164

1. Не падаем, если для открытия файла в редакторе не хватило памяти.

2. Пара мелочей.

w17 29.10.2014 18:50:54 +0300 - build 4163

1. Показываем номер кодовой страницы в предупреждении о проблемах перекодирования в редакторе.

w17 28.10.2014 16:39:44 +0300 - build 4162

1. FFILEEDIT_CODEPAGECHANGEDBYUSER/editor, CodePageChangedByUser/viewer - атавизмы.

w17 28.10.2014 10:06:51 +0300 - build 4161

1. Продолжаем 4150.

w17 27.10.2014 12:45:51 +0300 - build 4160

1. Продолжаем 4150.

zg 26.10.2014 16:39:00 +0200 - build 4159

1. убран оригинальный подход к перерисовке окна посылкой ему gotfocus.

zg 25.10.2014 21:39:01 +0200 - build 4158

1. оптимизация отрисовки редактора.

w17 25.10.2014 21:18:26 +0400 - build 4157

1. Снова 4150.

zg 25.10.2014 18:45:48 +0200 - build 4156

1. убрана лишняя перерисовка edit-control'ов.

w17 22.10.2014 17:54:51 +0400 - build 4155

1. Ещё одно уточнение 4150.

2. Можно задавать список кодовых страниц при переключении по F8 в редакторе/просмотрщике.
   far:config Editor.F8CPs
   far:config Viewer.F8CPs
   Умолчание пустая строка - оставляет старое поведение ANSI/OEM.

drkns 22.10.2014 00:04:44 +0200 - build 4154

1. Уточнение 4145.

w17 21.10.2014 15:02:24 +0400 - build 4153

1. Уточнение уточнения 4150.

w17 21.10.2014 14:25:48 +0400 - build 4152

1. Уточнение 4150.
